Actualizar INPC.html

--- a/INPC.html
+++ b/INPC.html
@@ -168,22 +168,22 @@
      <div class="container">
           <div class="date-picker">
                <div class="date-section">
-                    <label for="from-year">Desde Año:</label>
+                    <label for="from-year">📆 Desde Año:</label>
                     <select id="from-year"></select>
                </div>
                <div class="date-section">
-                    <label for="from-month">Desde Mes:</label>
+                    <label for="from-month">📆 Desde Mes:</label>
                     <select id="from-month"></select>
                </div>
           </div>
 
           <div class="date-picker">
                <div class="date-section">
-                    <label for="to-year">Hasta Año:</label>
+                    <label for="to-year">📆 Hasta Año:</label>
                     <select id="to-year"></select>
                </div>
                <div class="date-section">
-                    <label for="to-month">Hasta Mes:</label>
+                    <label for="to-month">📆 Hasta Mes:</label>
                     <select id="to-month"></select>
                </div>
           </div>
