--- a/INPC.html
+++ b/INPC.html
@@ -2,7 +2,7 @@
      <html lang="es">
      <head>
      <meta charset="UTF-8">
-     <title>Consulta de INPC Histórico</title>
+     <title>INPC Histórico</title>
      <style>
           :root {
               /* Colores */
