--- a/INPC.html
+++ b/INPC.html
@@ -2,7 +2,7 @@
      <html lang="es">
      <head>
      <meta charset="UTF-8">
-     <title>Consulta de INPC Histórico</title>
+     <title>INPC Histórico</title>
      <style>
         :root {
             /* Colores */
@@ -278,7 +278,7 @@
           <div id="error" class="error"></div>
      </div>
      <footer>
-          Creado por Alejandro Toral
+          Creado por Alejandro Toral 🚀
      </footer>
 
      <script>
