--- a/retirodedivisas.html
+++ b/retirodedivisas.html
@@ -134,7 +134,7 @@
         <h1>Retiro de Divisas</h1>
         <div id="date-time" style="font-size: 0.8rem; color: #003cff; margin-bottom: 10px;"></div>
         <hr style="border-color:#4d46a7;">
-        <input type="text" id="user-input" placeholder="Nombre de usuario 👨🏻" aria-label="Nombre de usuario" />
+        <input type="text" id="user-input" placeholder="Nombre de usuario 👤" aria-label="Nombre de usuario" />
         <div id="user-error" class="error-message hidden">El nombre de usuario es requerido.</div>
         <hr style="border-color:#4d46a7;">
         <select id="sucursal" aria-label="Seleccione una sucursal" onchange="toggleSucursalInput()">
