Actualizar retirodedivisas.html

--- a/retirodedivisas.html
+++ b/retirodedivisas.html
@@ -399,7 +399,7 @@
 
             // Generar el contenido del comprobante
 const printContent = `
-    <div style="font-family: Consolas, sans-serif; width: 80mm; padding: 5px; font-size: 12px;">
+    <div style="font-family: Arial, sans-serif; width: 80mm; padding: 5px; font-size: 12px;">
         <h1 style="text-align: center; font-size: 18px; margin: 5px 0; color: #000;">Retiro de Divisas</h1>
         
         <!-- Línea divisoria -->
