--- a/retirodedivisas.html
+++ b/retirodedivisas.html
@@ -399,7 +399,7 @@
 
             // Generar el contenido del comprobante
 const printContent = `
-    <div style="font-family: Arial, sans-serif; width: 80mm; padding: 5px; font-size: 12px;">
+    <div style="font-family: Arial, sans-serif; width: 80mm; padding: 2px; font-size: 12px;">
         <h1 style="text-align: center; font-size: 18px; margin: 5px 0; color: #000;">Retiro de Divisas</h1>
         
         <!-- Línea divisoria -->
@@ -445,7 +445,7 @@ const printContent = `
         </div>
         
         <div style="text-align: center; margin-top: 5px; font-size: 12px; color: #555;">
-            <p>Desarrollado por Alejandro Toral</p>
+            <p>Desarrollado por Toral</p>
         </div>
     </div>
 `;
