--- a/retirodedivisas.html
+++ b/retirodedivisas.html
@@ -407,7 +407,7 @@ const printContent = `
             <hr style="border: 0; border-top: 2px dashed #000; margin: 5px 0;">
         </div>
         
-        <div style="margin-bottom: 5px;">
+        <div style="text-align: left; margin-bottom: 5px;">
             <p style="margin: 4px 0; font-size: 14px;"><strong>Fecha y Hora:</strong> ${transaction.dateTime}</p>
             <p style="margin: 4px 0; font-size: 14px;"><strong>Usuario:</strong> ${transaction.user}</p>
             <p style="margin: 4px 0; font-size: 14px;"><strong>Sucursal:</strong> ${transaction.sucursal}</p>
