--- a/Fraccionador.html
+++ b/Fraccionador.html
@@ -399,9 +399,15 @@ tbody tr:hover {
             </thead>
             <tbody></tbody>
         </table>
-        <div id="footer">
-            Developed by <a href="https://thoraal.github.io/#work" target="_blank">Alejandro Toral</a>
+        <div id="footer" style="text-align: center; margin-top: 20px; font-size: 0.9rem; color: #555;">
+            <a href="https://wa.me/9982358520?text=¡Hola!%20Vi%20tu%20trabajo%20y%20me%20encantaría%20contactarte"
+               target="_blank"
+               rel="noopener noreferrer"
+               style="color: inherit; text-decoration: none;">
+               Creado por Alejandro Toral 🚀
+            </a>
         </div>
+        
     </div>
     <script>
         // JavaScript functions for handling various actions
