--- a/Fraccionador.html
+++ b/Fraccionador.html
@@ -404,7 +404,7 @@ tbody tr:hover {
                target="_blank"
                rel="noopener noreferrer"
                style="color: inherit; text-decoration: none;">
-               Creado por Alejandro Toral 🚀
+               Creado por Alejandro Toral 📱
             </a>
         </div>
         
