--- a/retirodedivisas.html
+++ b/retirodedivisas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" type="image/png" href="assets/img/retiro.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Retiro de Divisas</title>
+    <title>Retiro de Divisas 💵</title>
     <style>
     /* =====================================
     1. VARIABLES & GLOBAL SETTINGS
