Actualizar retirodedivisas.html

--- a/retirodedivisas.html
+++ b/retirodedivisas.html
@@ -34,7 +34,7 @@
     --blur-radius: 14px;
 
     /* Tipografía y tamaños */
-    --font-family-base: 'Consolas', sans-serif;
+    --font-family-base: 'Helvetica', sans-serif;
     --font-size-base: 0.9rem;
 
     /* Radios y transiciones */
