--- a/retirodedivisas.html
+++ b/retirodedivisas.html
@@ -589,7 +589,7 @@
 
             // Generar el contenido del comprobante
 const printContent = `
-    <div style="font-family: Arial, sans-serif; width: 80mm; padding: 2px; font-size: 11px;">
+    <div style="font-family: Archivo Narrow, sans-serif; width: 80mm; padding: 2px; font-size: 11px;">
         <h1 style="text-align: center; font-size: 18px; margin: 5px 0; color: #000;">Retiro de Divisas</h1>
         
         <!-- Línea divisoria -->
