--- a/retirodedivisas.html
+++ b/retirodedivisas.html
@@ -588,13 +588,13 @@
             });
 
 const printContent = `
-    <div style="font-family: Arial, sans-serif; width: 80mm; padding: 5px; font-size: 14px; background-color: #fff; line-height: 1.4;">
+    <div style="font-family: 'Courier', monospace; width: 80mm; padding: 5px; font-size: 14px; background-color: #fff; line-height: 1.4;">
         <!-- Encabezado -->
         <div style="text-align: center; margin-bottom: 10px;">
             <h1 style="font-size: 20px; margin: 0; font-weight: bold; background-color: #000; color: #fff; padding: 5px; border-radius: 5px;">
                 RETIRO DE DIVISAS
             </h1>
-            <p style="font-size: 12px; margin: 5px 0;">━━━━━━━━━━━━━━━━━━━━</p>
+            <p style="font-size: 12px; margin: 5px 0;">══════════════════════</p>
         </div>
 
         <!-- Información de la transacción -->
@@ -614,7 +614,7 @@ const printContent = `
         </div>
 
         <!-- Línea divisoria -->
-        <p style="font-size: 12px; margin: 5px 0;">━━━━━━━━━━━━━━━━━━━━</p>
+        <p style="font-size: 12px; margin: 5px 0;">────────────────────────</p>
 
         <!-- Detalle de denominaciones -->
         <div style="margin-bottom: 10px;">
@@ -632,7 +632,7 @@ const printContent = `
         </div>
 
         <!-- Línea divisoria -->
-        <p style="font-size: 12px; margin: 5px 0;">━━━━━━━━━━━━━━━━━━━━</p>
+        <p style="font-size: 12px; margin: 5px 0;">────────────────────────</p>
 
         <!-- Total -->
         <div style="text-align: right; margin-bottom: 10px;">
@@ -642,7 +642,7 @@ const printContent = `
         </div>
 
         <!-- Línea divisoria -->
-        <p style="font-size: 12px; margin: 5px 0;">━━━━━━━━━━━━━━━━━━━━</p>
+        <p style="font-size: 12px; margin: 5px 0;">══════════════════════</p>
 
         <!-- Pie de página -->
         <div style="text-align: center; margin-top: 10px;">
