Actualizar retirodedivisas.html

--- a/retirodedivisas.html
+++ b/retirodedivisas.html
@@ -61,7 +61,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh; /* Permite que el body se expanda si es necesario */
+    overflow-y: auto;  /* Habilita la navegación vertical */
     }
 
     /* =====================================
