--- a/retirodedivisas.html
+++ b/retirodedivisas.html
@@ -292,6 +292,8 @@
         <div id="sucursal-error" class="error-message hidden">La sucursal es requerida.</div>
         <hr style="border-color:#4d46a7;">
         <input type="number" id="currency-key" placeholder="Clave divisa 🔑" aria-label="Clave de divisa" oninput="selectCurrencyByKey()" />
+        <input type="text" id="buscadorDivisas" placeholder="Buscar divisa...">
+        <ul id="listaDivisas"></ul> <!-- Aquí se mostrarán las coincidencias -->
         <div id="currency-key-error" class="error-message hidden">Clave de divisa no válida.</div>
         <select id="currency" aria-label="Seleccione una divisa" onchange="updateCurrencyKey()">
             <option value="">--- Seleccione una divisa ---</option>
